kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
spec:
  replicas: 2  # 앱을 2개 실행 (안정성)
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app-container
        # [중요] 2번에서 확인한 ECR 주소를 여기에 넣으세요.
        # 맨 뒤의 ':latest'는 GitHub Actions가 만든 태그(commit hash)로 바꿔야 합니다.
        image: 798874239435.dkr.ecr.ap-northeast-2.amazonaws.com/project-cluster-flask-app:latest
        ports:
        - containerPort: 8000 # Dockerfile에서 Gunicorn이 실행되는 포트
